[VIVO-1415] Claiming interface for DOI and PMID

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -374,3 +374,10 @@ Vitro.reconcile.defaultTypeList = http://vivoweb.org/ontology/core#Role, core:Ro
     http://xmlns.com/foaf/0.1/Organization, foaf:Organization; \
     http://xmlns.com/foaf/0.1/Person, foaf:Person; \
     http://purl.obolibrary.org/obo/IAO_0000030, obo:IAO_0000030
+
+
+  # Configure the support for claiming by DOI or PMID
+  # This is a list of all the providers that are active for claiming articles from
+  # Available providers are: doi, pmid
+  # If you do not with to use the claiming interface, set this property to nothing (empty)
+createAndLink.providers = doi, pmid
