Fixed gnarly DOI containing semi-colon (removed semi-colon as separator), match more DOI formats internally, improve AUTH restrictions

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -378,6 +378,7 @@ Vitro.reconcile.defaultTypeList = http://vivoweb.org/ontology/core#Role, core:Ro
 
   # Configure the support for claiming by DOI or PMID
   # This is a list of all the providers that are active for claiming articles from
-  # Available providers are: doi, pmid
-  # If you do not with to use the claiming interface, set this property to nothing (empty)
+  # Options: doi, pmid
+  # which search Crossref and PubMed, respectively
+  # If you do not wish to use the claiming interface, set this property to nothing (empty)
 createAndLink.providers = doi, pmid
