--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -230,6 +230,13 @@ VitroConnection.DataSource.validationQuery = SELECT 1
    # release, sandbox
 # orcid.api = sandbox
 
+   # Specify the type of API access that you have - public or member
+   #   public - only allows you to confirm ORCID IDs
+   #   member - allows VIVO to write a link to the VIVO profile in the ORCID record
+   # If you only have a public API key, ensure that you have entered public here
+#orcid.apiLevel = public
+
+
 # -----------------------------------------------------------------------------
 # OTHER OPTIONS
 # -----------------------------------------------------------------------------
