[VIVO-1415] Add publication claiming from PubMed and CrossRef (#129)
* Claiming interface for DOI and PMID
* Allow http://doi.org urls in the claim process
* Make button i18n compliant
* Check Editor already claimed, error for no citation, PUMCIDs fixed
* Fixed gnarly DOI containing semi-colon (removed semi-colon as separator), match more DOI formats internally, improve AUTH restrictions
* Add Wilma themes
* Add permissions to allow proxy editors
* Update DOI resolver URI for content negotiation
* CSS changes to prevent layout problems in admin pages
* Add selectable list of publication types on import

Resolves to https://jira.duraspace.org/browse/VIVO-1415

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -375,8 +375,14 @@ Vitro.reconcile.defaultTypeList = http://vivoweb.org/ontology/core#Role, core:Ro
     http://xmlns.com/foaf/0.1/Person, foaf:Person; \
     http://purl.obolibrary.org/obo/IAO_0000030, obo:IAO_0000030
 
+  # Configure the support for claiming by DOI or PMID
+  # This is a list of all the providers that are active for claiming articles from
+  # Options: doi, pmid
+  # which search Crossref and PubMed, respectively
+  # If you do not wish to use the claiming interface, set this property to nothing (empty)
+createAndLink.providers = doi, pmid
 
-# Triple pattern fragments is a very fast, very simple means for querying a triple store.
-# The triple pattern fragments API in VIVO puts little load on the server, providing a simple means for getting data from the triple store. The API has a web interface for manual use, can be used from the command line via curl, and can be used by programs.
-
+  # Triple pattern fragments is a very fast, very simple means for querying a triple store.
+  # The triple pattern fragments API in VIVO puts little load on the server, providing a simple means for getting data from the triple store. The API has a web interface for manual use, can be used from the command line via curl, and can be used by programs.
+  #
 # tpf.activeFlag = true
