--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-project</artifactId>
-    <version>1.11.0-SNAPSHOT</version>
+    <version>1.11.0</version>
     <packaging>pom</packaging>
 
     <name>VIVO</name>
@@ -358,7 +358,7 @@
                     <dependency>
                         <groupId>org.vivoweb</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>1.11.0-SNAPSHOT</version>
+                        <version>1.11.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
