--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -57,13 +57,16 @@ argon2.memory = 1024
 argon2.time = 1000
 
   #
+  # NOTE: VitroConnection.DataSource.* properties are only used in conjuction with
+  #       an SDB triple store.
+  #
   # The basic parameters for a database connection. Change the end of the
   # URL to reflect your database name (if it is not "vitrodb"). Change the username
   # and password to match the authorized database user you created.
   #
-VitroConnection.DataSource.url = jdbc:mysql://localhost/vitrodb
-VitroConnection.DataSource.username = vitrodbUsername
-VitroConnection.DataSource.password = vitrodbPassword
+# VitroConnection.DataSource.url = jdbc:mysql://localhost/vitrodb
+# VitroConnection.DataSource.username = vitrodbUsername
+# VitroConnection.DataSource.password = vitrodbPassword
 
   #
   # Email parameters which VIVO can use to send mail. If these are left empty,
@@ -118,14 +121,14 @@ selfEditing.idMatchingProperty = http://vivo.mydomain.edu/ns#networkId
   # The maximum number of active connections in the database connection pool.
   # Increase this value to support a greater number of concurrent page requests.
   #
-VitroConnection.DataSource.pool.maxActive = 40
+# VitroConnection.DataSource.pool.maxActive = 40
 
   #
   # The maximum number of database connections that will be allowed
   # to remain idle in the connection pool.  Default is 25%
   # of the maximum number of active connections.
   #
-VitroConnection.DataSource.pool.maxIdle = 10
+# VitroConnection.DataSource.pool.maxIdle = 10
 
 
 # -----------------------------------------------------------------------------
@@ -136,9 +139,9 @@ VitroConnection.DataSource.pool.maxIdle = 10
   # Parameters to change in order to use VIVO with a database other than
   # MySQL.
   #
-VitroConnection.DataSource.dbtype = MySQL
-VitroConnection.DataSource.driver = com.mysql.jdbc.Driver
-VitroConnection.DataSource.validationQuery = SELECT 1
+# VitroConnection.DataSource.dbtype = MySQL
+# VitroConnection.DataSource.driver = com.mysql.jdbc.Driver
+# VitroConnection.DataSource.validationQuery = SELECT 1
 
   # Note: the above parameters allow you to change the relational database that
   # is used as the back end for Jena SDB. If you want to use a triple store
