Add 'home' files into build war artifact
Related to: https://jira.lyrasis.org/browse/VIVO-1443

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -79,13 +79,12 @@ email.replyTo = vivoAdmin@mydomain.edu
   #
   # URL of Solr context used in local VIVO search. This will usually consist of:
   #     scheme + server_name + port + vivo_webapp_name + "solr"
-  # In the standard installation, the Solr context will be on the same server as VIVO,
-  # and in the same Tomcat instance. The path will be the VIVO webapp.name (specified
-  # in build.properties) + "solr"
+  # In the standard installation, the Solr context will be on the same server as VIVO
+  # as a standalone service.
   #   Example:
-  #     vitro.local.solr.url = http://localhost:8080/vivosolr
+  #     vitro.local.solr.url = http://localhost:8983/solr/vivocore
   #
-vitro.local.solr.url = http://localhost:8080/vivosolr
+vitro.local.solr.url = http://localhost:8983/solr/vivocore
 
 
 # -----------------------------------------------------------------------------
