--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.11.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>VIVO Lanugages</name>
+    <name>VIVO Languages</name>
     <description>VIVO Languages</description>
     <url>http://vivoweb.org/</url>
 
