--- a/installer/home/pom.xml
+++ b/installer/home/pom.xml
@@ -108,11 +108,11 @@
             <type>tar.gz</type>
         </dependency>
         <!-- Dependency for multilingual support -->
-        <!-- dependency>
+        <dependency>
             <groupId>org.vivoweb</groupId>
-            <artifactId>vivo-languages-home</artifactId>
-            <version>[2.0.0,2.1.0)</version>
+            <artifactId>vivo-languages-home-core</artifactId>
+            <version>${project.version}</version>
             <type>tar.gz</type>
-        </dependency -->
+        </dependency>
     </dependencies>
 </project>
