update example runtime properties

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -76,17 +76,13 @@ argon2.time = 1000
 email.smtpHost = smtp.mydomain.edu
 email.replyTo = vivoAdmin@mydomain.edu
 
-  #
-  # URL of Solr context used in local VIVO search. This will usually consist of:
-  #     scheme + server_name + port + vivo_webapp_name + "solr"
-  # In the standard installation, the Solr context will be on the same server as VIVO,
-  # and in the same Tomcat instance. The path will be the VIVO webapp.name (specified
-  # in build.properties) + "solr"
-  #   Example:
-  #     vitro.local.solr.url = http://localhost:8080/vivosolr
-  #
-vitro.local.solr.url = http://localhost:8080/vivosolr
+#
+# Solr URL used in local Vitro search.
+vitro.local.solr.url = http://localhost:8080/solr
 
+#
+# Solr collection name used in local Vitro search.
+vitro.local.solr.collection = vitrocore
 
 # -----------------------------------------------------------------------------
 # LINKING USER ACCOUNTS TO PROFILE PAGES
