refactor to core

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -81,8 +81,8 @@ email.replyTo = vivoAdmin@mydomain.edu
 vitro.local.solr.url = http://localhost:8080/solr
 
 #
-# Solr collection name used in local Vitro search.
-vitro.local.solr.collection = vitrocore
+# Solr core name used in local Vitro search.
+vitro.local.solr.core = vitrocore
 
 # -----------------------------------------------------------------------------
 # LINKING USER ACCOUNTS TO PROFILE PAGES
