[VIVO-1936] i18n: updated the language comment in example.runtime.properties and set example.settings.xml back to the default values

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -202,9 +202,9 @@ selfEditing.idMatchingProperty = http://vivo.mydomain.edu/ns#networkId
 
   #
   # A list of supported languages or Locales that the user may choose to
-  # use instead of the one specified by the browser. Selection images must
-  # be available in the i18n/images directory of the theme. This affects
-  # RDF data retrieved from the model, if RDFService.languageFilter is true.
+  # use instead of the one specified by the browser. The selected language(s) 
+  # must exist in the VIVO-languages repository.This affects RDF data retrieved
+  # from the model, if RDFService.languageFilter is true.
   # This also affects the text of pages that have been modified to support
   # multiple languages.
   #
