VIVO-1443: app name (#2)
* Non-functional change to comment in example.applicationSetup.n3

Related to: https://jira.lyrasis.org/browse/VIVO-1741

* Update orcidConfirm.ftl (#199)

* remove example-settings.xml
* simplify war name and afford override during build
* default app name to vivo and pass into context.xml

Co-authored-by: Andrew Woods <awoods@duraspace.org>
Co-authored-by: L.O <53535673+lb-ov@users.noreply.github.com>

--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -13,6 +13,7 @@
     <name>VIVO Installer</name>
 
     <properties>
+        <app-name>vivo</app-name>
         <vitro-version>${project.version}</vitro-version>
         <maven-site-plugin.skip>true</maven-site-plugin.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
