--- a/installer/webapp/pom.xml
+++ b/installer/webapp/pom.xml
@@ -20,6 +20,7 @@
     <name>VIVO Install Web App</name>
 
     <build>
+        <finalName>${app-name}</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
