Enable war deployment model (#197)
* Add 'home' files into build war artifact

Related to: https://jira.lyrasis.org/browse/VIVO-1443

* Disable copying exploded war to Tomcat dir

- hardcode vivo.all.log file name
- must now set system property: -Dvivo-dir=/opt/vivo/home/

Related to: https://jira.lyrasis.org/browse/VIVO-1443

* Ensure build does not remove and re-add VIVO_HOME/rdf

Related to: https://jira.lyrasis.org/browse/VIVO-1443

* Remove unnecessary profile from installer/pom.xml

Related to: https://jira.lyrasis.org/browse/VIVO-1443

* Rename example config files to have 'default' prefix

Related to: https://jira.lyrasis.org/browse/VIVO-1443

* Require common properties to be in JNDI

Properties include:
- vitro/home
- vitro/appName
- vitro/rootUserAddress
- vitro/defaultNamespace

Related to: https://jira.lyrasis.org/browse/VIVO-1443

* VIVO-1443: app name (#2)

* Non-functional change to comment in example.applicationSetup.n3

Related to: https://jira.lyrasis.org/browse/VIVO-1741

* Update orcidConfirm.ftl (#199)

* remove example-settings.xml
* simplify war name and afford override during build
* default app name to vivo and pass into context.xml

Co-authored-by: Andrew Woods <awoods@duraspace.org>
Co-authored-by: L.O <53535673+lb-ov@users.noreply.github.com>

Co-authored-by: Andrew Woods <awoods@duraspace.org>
Co-authored-by: William Welling <wwelling@library.tamu.edu>
Co-authored-by: L.O <53535673+lb-ov@users.noreply.github.com>

--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -13,6 +13,7 @@
     <name>VIVO Installer</name>
 
     <properties>
+        <app-name>vivo</app-name>
         <vitro-version>${project.version}</vitro-version>
         <maven-site-plugin.skip>true</maven-site-plugin.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,12 +27,6 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-install-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
                 </configuration>
             </plugin>
             <plugin>
@@ -158,12 +153,6 @@
                         </executions>
                     </plugin>
                     <plugin>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                    <plugin>
                         <artifactId>maven-resources-plugin</artifactId>
                         <version>2.6</version>
                         <executions>
@@ -183,45 +172,6 @@
                             <execution>
                                 <id>test</id>
                                 <phase/>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>default-war</id>
-                                <phase/>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>install</id>
-            <activation>
-                <property><name>vivo-dir</name></property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-enforcer-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>enforce-properties</id>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>enforce</goal>
-                                </goals>
-                                <configuration>
-                                    <rules>
-                                        <requireProperty>
-                                            <property>app-name</property>
-                                            <message>You must provide an application name (app-name)</message>
-                                        </requireProperty>
-                                    </rules>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
