--- a/home/src/main/resources/config/default.runtime.properties
+++ b/home/src/main/resources/config/default.runtime.properties
@@ -19,27 +19,6 @@
 # BASIC PROPERTIES
 # -----------------------------------------------------------------------------
 
-  #
-  # This namespace will be used when generating URIs for objects created in the
-  # editor. In order to serve linked data, the default namespace must be composed
-  # as follows (optional elements in parentheses):
-  #
-  # scheme + server_name (+ port) (+ servlet_context) + "/individual/"
-  #
-  # For example, Cornell's default namespace is:
-  #
-  # http://vivo.cornell.edu/individual/
-  #
-Vitro.defaultNamespace = http://vivo.mydomain.edu/individual/
-
-  #
-  # The email address of the root user for the VIVO application. The password
-  # for this user is initially set to "rootPassword", but you will be asked to
-  # change the password the first time you log in.
-  #
-rootUser.emailAddress = vivo_root@mydomain.edu
-
-
 #
 # Argon2 password hashing parameters for time, memory and parallelism required to
 # compute a hash.
@@ -79,13 +58,12 @@ email.replyTo = vivoAdmin@mydomain.edu
   #
   # URL of Solr context used in local VIVO search. This will usually consist of:
   #     scheme + server_name + port + vivo_webapp_name + "solr"
-  # In the standard installation, the Solr context will be on the same server as VIVO,
-  # and in the same Tomcat instance. The path will be the VIVO webapp.name (specified
-  # in build.properties) + "solr"
+  # In the standard installation, the Solr context will be on the same server as VIVO
+  # as a standalone service.
   #   Example:
-  #     vitro.local.solr.url = http://localhost:8080/vivosolr
+  #     vitro.local.solr.url = http://localhost:8983/solr/vivocore
   #
-vitro.local.solr.url = http://localhost:8080/vivosolr
+vitro.local.solr.url = http://localhost:8983/solr/vivocore
 
 
 # -----------------------------------------------------------------------------
