--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
           java-version: 1.8
 
       - name: Maven Build
-        run: mvn clean package -Dmaven.test.skip=false
+        run: mvn clean install
