add repositories to distribution management

--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -175,6 +175,14 @@
             <id>vivo-installer</id>
             <url>http://vivo-project.github.io/</url>
         </site>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </distributionManagement>
 
     <reporting>
