pass docker compose env to containers

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-LOCAL_VIVO_HOME=./vivo-home
+LOCAL_VIVO_HOME=C:\Users\wwelling\Development\vivo\vivo-home
+RESET_HOME=true
+RESET_CORE=true
+VERBOSE=no
