--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-LOCAL_VIVO_HOME=C:\Users\wwelling\Development\vivo\vivo-home
-RESET_HOME=true
-RESET_CORE=true
+LOCAL_VIVO_HOME=./vivo-home
+RESET_HOME=false
+RESET_CORE=false
 VERBOSE=no
