revert deployment changes

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -19,6 +19,26 @@
 # BASIC PROPERTIES
 # -----------------------------------------------------------------------------
 
+  #
+  # This namespace will be used when generating URIs for objects created in the
+  # editor. In order to serve linked data, the default namespace must be composed
+  # as follows (optional elements in parentheses):
+  #
+  # scheme + server_name (+ port) (+ servlet_context) + "/individual/"
+  #
+  # For example, Cornell's default namespace is:
+  #
+  # http://vivo.cornell.edu/individual/
+  #
+Vitro.defaultNamespace = http://vivo.mydomain.edu/individual/
+
+  #
+  # The email address of the root user for the VIVO application. The password
+  # for this user is initially set to "rootPassword", but you will be asked to
+  # change the password the first time you log in.
+  #
+rootUser.emailAddress = vivo_root@mydomain.edu
+
 #
 # Argon2 password hashing parameters for time, memory and parallelism required to
 # compute a hash.
