--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,7 @@ name: Docker
 on:
   push:
     branches:
-      - main
+      - revert-deployment-strategy
   workflow_dispatch:
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Clone Vitro
-        run: git clone https://github.com/vivo-project/Vitro.git ../Vitro
+        run: git clone --single-branch --branch revert-deployment-strategy https://github.com/vivo-project/Vitro.git ../Vitro
 
       - name: Maven Cache
         uses: actions/cache@v2
