Revert "revert deployment changes (#228)"
This reverts commit 7773db339421aa19e44653389a58c703fb2b7d92.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           server-password: MAVEN_PASSWORD
 
       - name: Maven Deploy
-        run: mvn --batch-mode deploy -Pskip
+        run: mvn --batch-mode deploy
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
