--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
           java-version: 11
 
       - name: Maven Build
-        run: mvn clean package -s installer/example-settings.xml
+        run: mvn clean install
