--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,7 +32,7 @@ jobs:
           java-version: 11
 
       - name: Maven Build
-        run: mvn clean package -s installer/example-settings.xml
+        run: mvn clean install
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
