[VIVO-1982] - Set default email params to blank (#238)
* Set default email params to blank

* Comment out email settings

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -71,8 +71,12 @@ argon2.time = 1000
   # Email parameters which VIVO can use to send mail. If these are left empty,
   # the "Contact Us" form will be disabled and users will not be notified of
   # changes to their accounts.
-# email.smtpHost = smtp.mydomain.edu
-# email.replyTo = vivoAdmin@mydomain.edu
+  #   Example:
+  #     email.smtpHost = smtp.mydomain.edu
+  #     email.replyTo = vivoAdmin@mydomain.edu
+  #
+# email.smtpHost =
+# email.replyTo =
 
   #
   # URL of Solr context used in local VIVO search. This will usually consist of:
