--- a/core/webapp/pom.xml
+++ b/core/webapp/pom.xml
@@ -4,13 +4,13 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-languages-webapp-core</artifactId>
-    <version>1.12.2-SNAPSHOT</version>
+    <version>1.12.2</version>
     <packaging>war</packaging>
 
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-languages-core</artifactId>
-        <version>1.12.2-SNAPSHOT</version>
+        <version>1.12.2</version>
         <relativePath>..</relativePath>
     </parent>
 
