--- a/es/pom.xml
+++ b/es/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-languages-es</artifactId>
-    <version>1.12.2-SNAPSHOT</version>
+    <version>1.12.2</version>
     <packaging>pom</packaging>
 
     <name>VIVO Languages es</name>
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-languages</artifactId>
-        <version>1.12.2-SNAPSHOT</version>
+        <version>1.12.2</version>
         <relativePath>..</relativePath>
     </parent>
     <licenses>
@@ -54,7 +54,7 @@
         <connection>scm:git:git@github.com:vivo-project/VIVO-languages.git</connection>
         <developerConnection>scm:git:git@github.com:vivo-project/VIVO-languages.git</developerConnection>
         <url>git@github.com:vivo-project/VIVO-languages.git</url>
-        <tag>HEAD</tag>
+        <tag>vivo-languages-1.12.2</tag>
     </scm>
 
     <properties>
